--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>website</title>
 </head>
 
+    <!---->
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>section id
@@ -24,6 +25,8 @@
             </ul>
         </nav>
     </header>
+
+     <!--added alts here and replaced the div banner with img src, and replaced div with section elements-->
     <img src="assets/images/digital-marketing-meeting.jpg" id="banner" alt="digital-marketing-meeting-picture">
     <section class="content">
         <section class="search-engine-optimization">
@@ -48,6 +51,8 @@
             </p>
         </section>
     </section>
+
+    <!--Benefits side panel content, changed div to sections, added alts to the img's-->
     <section class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,10 +76,11 @@
             </p>
         </section>
     </section>
+   <!--made footer its own element-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            2019 Horiseon Social Solution Services, Inc.
+            &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
 </body>
