--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!---->
 <body>
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>section id
+        <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
